[gd_scene load_steps=29 format=3 uid="uid://b5te2fsxf6fiv"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_qhrkd"]
[ext_resource type="PackedScene" uid="uid://dktve4c2v3ca1" path="res://scenes/checkerboard.tscn" id="2_tk2xy"]
[ext_resource type="Texture2D" uid="uid://ca2f1orv63jf3" path="res://art/ui/border_thick.png" id="3_bpic2"]
[ext_resource type="FontFile" uid="uid://cfut2f0td8o4n" path="res://ui/fonts/minimalpixel.fnt" id="4_4esp3"]
[ext_resource type="Texture2D" uid="uid://ctpog8vwrc8v5" path="res://art/ui/border3.png" id="5_h1754"]
[ext_resource type="FontFile" uid="uid://brsuylqxpu63h" path="res://ui/fonts/hero-speak.ttf" id="6_etqlc"]
[ext_resource type="FontFile" uid="uid://ba51hssbtoj57" path="res://ui/fonts/tinypixel.otf" id="7_rl65g"]
[ext_resource type="PackedScene" uid="uid://clgahvmopdmuf" path="res://ui/menu_button.tscn" id="8_oib2l"]
[ext_resource type="Texture2D" uid="uid://b2txrq5tyjtej" path="res://ui/player_mainmenu/frame_0.png" id="9_acral"]
[ext_resource type="Texture2D" uid="uid://13nmreix8idi" path="res://ui/player_mainmenu/frame_1.png" id="10_a4ai7"]
[ext_resource type="Texture2D" uid="uid://bd6kwmxyvlfuf" path="res://art/objects/sign.png" id="11_5f6a0"]
[ext_resource type="Texture2D" uid="uid://c8l2w7tt70s1a" path="res://art/ui/border_screen.png" id="12_wl2r0"]
[ext_resource type="Script" path="res://ui/transitions.gd" id="13_p06o7"]
[ext_resource type="AudioStream" uid="uid://yvd4xt1hlnjm" path="res://audio/main_menu_music.ogg" id="14_01alv"]

[sub_resource type="LabelSettings" id="LabelSettings_66qyy"]
font = ExtResource("4_4esp3")
font_size = 35
font_color = Color(0.635294, 0.94902, 0.952941, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gbryf"]
font = ExtResource("6_etqlc")
font_size = 14
font_color = Color(0.635294, 0.94902, 0.952941, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f2toc"]
line_spacing = 0.0
font = ExtResource("7_rl65g")
font_size = 7
font_color = Color(0.882353, 0.921569, 0.631373, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_85t5b"]
font = ExtResource("6_etqlc")
font_size = 14
font_color = Color(0.333333, 0.921569, 0.631373, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventKey" id="InputEventKey_5060h"]
device = -1
keycode = 83
unicode = 115

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_ry88m"]
button_index = 6
pressed = true

[sub_resource type="Shortcut" id="Shortcut_eui6s"]
events = [SubResource("InputEventKey_5060h"), SubResource("InputEventJoypadButton_ry88m")]

[sub_resource type="LabelSettings" id="LabelSettings_ueesj"]
font = ExtResource("6_etqlc")
font_size = 14
font_color = Color(0.882353, 0.921569, 0.631373, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c34aw"]
font = ExtResource("6_etqlc")
font_color = Color(0.882353, 0.921569, 0.631373, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_eevx2"]
frames = 2
frame_0/texture = ExtResource("9_acral")
frame_1/texture = ExtResource("10_a4ai7")
frame_1/duration = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v851e"]
texture = ExtResource("12_wl2r0")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="Animation" id="Animation_m3dhy"]
resource_name = "Fade In"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_pknib"]
resource_name = "Fade Out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wymux"]
_data = {
"Fade In": SubResource("Animation_m3dhy"),
"Fade Out": SubResource("Animation_pknib")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_qhrkd")

[node name="Checkerboard" parent="." instance=ExtResource("2_tk2xy")]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 2

[node name="TitleShadow" type="NinePatchRect" parent="."]
modulate = Color(0.360784, 0.360784, 0.360784, 0.623529)
offset_left = 8.0
offset_top = 14.0
offset_right = 192.0
offset_bottom = 61.0
texture = ExtResource("3_bpic2")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Title" type="MarginContainer" parent="."]
offset_right = 197.0
offset_bottom = 58.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Box" type="NinePatchRect" parent="Title"]
layout_mode = 2
texture = ExtResource("3_bpic2")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="TitleMargin" type="MarginContainer" parent="Title/Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 11

[node name="TitleLabel" type="Label" parent="Title/Box/TitleMargin"]
layout_mode = 2
text = "Morrow Moon"
label_settings = SubResource("LabelSettings_66qyy")
horizontal_alignment = 1

[node name="BuildNotes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="BuildNotes"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 157.0
grow_horizontal = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BuildNotesShadow" type="NinePatchRect" parent="BuildNotes/Margin"]
modulate = Color(0.439216, 0.439216, 0.439216, 0.560784)
layout_mode = 2
texture = ExtResource("5_h1754")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Box" type="NinePatchRect" parent="BuildNotes/Margin"]
layout_mode = 2
texture = ExtResource("5_h1754")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="TopContainer" type="MarginContainer" parent="BuildNotes/Margin/Box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BuildNotes/Margin/Box/TopContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="BuildNotesLabel" type="Label" parent="BuildNotes/Margin/Box/TopContainer/VBoxContainer"]
layout_mode = 2
text = "Build 11
Dec 1, 2024"
label_settings = SubResource("LabelSettings_gbryf")
horizontal_alignment = 1

[node name="ContentLabel" type="Label" parent="BuildNotes/Margin/Box/TopContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
text = "Battle scene prototype.
Inventory system.
Punching.
Sleeping system.
Day cycle.
Improved mouse support

"
label_settings = SubResource("LabelSettings_f2toc")
autowrap_mode = 2

[node name="BottomContainer" type="MarginContainer" parent="BuildNotes/Margin/Box"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 2

[node name="WebsiteLabel" type="Label" parent="BuildNotes/Margin/Box/BottomContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 1
text = "leegerken.org
"
label_settings = SubResource("LabelSettings_85t5b")
autowrap_mode = 2

[node name="Start" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_right = 70.0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 42

[node name="StartButton" parent="Start" instance=ExtResource("8_oib2l")]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
focus_neighbor_top = NodePath("../../Options/OptionsButton")
focus_neighbor_bottom = NodePath("../../Options/OptionsButton")
shortcut = SubResource("Shortcut_eui6s")
shortcut_in_tooltip = false

[node name="LabelMargin" type="MarginContainer" parent="Start/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
metadata/_edit_lock_ = true

[node name="StartLabel" type="Label" parent="Start/StartButton/LabelMargin"]
layout_mode = 2
text = "Start"
label_settings = SubResource("LabelSettings_ueesj")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Underline" type="Label" parent="Start/StartButton"]
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 33.0
text = "-"
label_settings = SubResource("LabelSettings_c34aw")

[node name="Options" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 70.0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 10

[node name="OptionsButton" parent="Options" instance=ExtResource("8_oib2l")]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
focus_neighbor_top = NodePath("../../Start/StartButton")
focus_neighbor_bottom = NodePath("../../Start/StartButton")
disabled = true

[node name="LabelMargin" type="MarginContainer" parent="Options/OptionsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="OptionsLabel" type="Label" parent="Options/OptionsButton/LabelMargin"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_ueesj")
horizontal_alignment = 1

[node name="PlayerMainMenu" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -115.0
offset_right = -216.0
offset_bottom = -83.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)
texture = SubResource("AnimatedTexture_eevx2")
flip_h = true
metadata/_edit_group_ = true

[node name="Sign" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -63.0
offset_right = -168.0
offset_bottom = -47.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)
texture = ExtResource("11_5f6a0")
metadata/_edit_group_ = true

[node name="Border" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v851e")
metadata/_edit_lock_ = true

[node name="Transitions" type="CanvasLayer" parent="."]
script = ExtResource("13_p06o7")

[node name="ColorRect" type="ColorRect" parent="Transitions"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="TransitionPlayer" type="AnimationPlayer" parent="Transitions"]
libraries = {
"": SubResource("AnimationLibrary_wymux")
}
autoplay = "Fade Out"

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_01alv")
volume_db = -20.254
pitch_scale = 0.91
autoplay = true

[connection signal="button_up" from="Start/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="pressed" from="Start/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="animation_finished" from="Transitions/TransitionPlayer" to="." method="_on_transition_player_animation_finished"]
